<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/green">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/text_title_screen_one"
        android:textColor="@color/silver"
        android:textAlignment="center"
        android:textSize="68dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"

        android:text="@string/text__screen_subtitle"
        android:textAlignment="textEnd"
        android:textColor="@color/gold"
        android:textSize="22dp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/tv_titleCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="344dp"

        android:text="@string/final_text_screen_one"
        android:textColor="@color/gold"
        android:textAlignment="center"
        android:textSize="26dp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:src="@drawable/img_soccer"
        app:layout_constraintBottom_toTopOf="@+id/tv_titleCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Button
        android:id="@+id/btn_init"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_init"
        android:textSize="20sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_margin="18dp"
        android:backgroundTint="@color/silver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titleCenter">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>