<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FootballDraw"
    android:background="@color/green">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_screen_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edt_players"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <EditText
        android:id="@+id/edt_players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/rounded_edt_text"
        android:hint="@string/text_teams"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <EditText
        android:id="@+id/key_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key_head_text"
        android:background="@drawable/rounded_edt_text"
        android:textSize="23sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColorHint="@color/green"
        android:textColor="@color/green"
        android:textAlignment="center"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_players"
        app:layout_constraintVertical_bias="0.11" />

    <EditText
        android:id="@+id/teams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_number_of_teams"
        android:background="@drawable/rounded_edt_text"
        android:textSize="23sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:inputType="numberDecimal"
        android:textColorHint="@color/green"
        android:textColor="@color/green"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key_head"
        app:layout_constraintVertical_bias="0.146" />

    <ImageView
        android:layout_width="290dp"
        android:layout_height="210dp"
        android:src="@drawable/soccer_goal"
        app:layout_constraintBottom_toTopOf="@+id/btn_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams" />

    <Button
        android:id="@+id/btn_sort"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_sorteio"
        android:textColor="@color/green"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teams"
        app:layout_constraintVertical_bias="0.809">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>